--- a/BonfireApp/app/src/main/AndroidManifest.xml
+++ b/BonfireApp/app/src/main/AndroidManifest.xml
@@ -1,14 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.bonfireapp.bonfireapp.bonfireapp" >
+    package="com.bonfire.bonfire" >
+
+    <uses-sdk
+        android:minSdkVersion="7"
+        android:targetSdkVersion="18" />
+
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
 
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:theme="@style/AppTheme"
+        android:uiOptions="splitActionBarWhenNarrow" >
         <activity
-            android:name=".Main"
+            android:name="com.bonfire.bonfire.LoginActivity"
+            android:configChanges="orientation|keyboardHidden"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -16,6 +25,12 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name="com.bonfire.bonfire.events.EventActivityShow" />
+        <activity android:name="com.bonfire.bonfire.events.EventActivityAdd" />
+        <activity android:name="com.bonfire.bonfire.events.EventActivityEdit" />
+        <activity android:name="com.bonfire.bonfire.Main"/>
+        <activity android:name="com.bonfire.bonfire.SignupActivity"/>
+
     </application>
 
 </manifest>
